<resources>
    <string name="app_name">SampleSMSApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_sorting">Sorting</string>
    <string name="title_activity_home">HomeActivity</string>

    <string-array name="arr_numbers">
        <item>1-20</item>
        <item>21-40</item>
        <item>41-60</item>
        <item>61-80</item>
    </string-array>


    <string name="home_btn1">Messages</string>
    <string name="home_btn2">Submit</string>
    <string name="home_btn3">Favorites</string>
    <string name="home_btn4">Settings</string>
    <string name="home_btn5">Search</string>
    <string name="home_btn6">Choose Language</string>
    <string name="home_btn7">Bug Report</string>
    <string name="home_btn8">Exit</string>
    <string name="title_activity_category_home">CategoryHomeActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>



    <string name="dash_welcome">Welcome %1$s</string>
    <string name="dash_language">Choose Language*</string>
    <string name="dash_category">Choose Category*</string>
    <string name="dash_message">Message Content*</string>
    <string name="dash_tv_added">Added :</string>
    <string name="dash_tv_submitted">Submitted :</string>
    <string name="dash_tv_limit">Daily Submission Limit (10)</string>
    <string name="cs_footer_txt">Night Mode</string>
    <string name="cs_footer_txt2">Total Categories :</string>
    <string name="v_info_name">Name</string>
    <string name="v_info_count">(1/10)</string>
    <string name="v_info_size">Size</string>
    <string name="abt_header_title">About Us</string>
    <string name="cs_header_title">Category Preferences</string>
    <string name="register_title">Sign Up (New User)</string>
    <string name="login_title">User Login</string>
    <string name="dashboard_title">Post Messages</string>
    <string name="bug_title">Bug Report</string>
    <string name="smsview_title">SMS Category</string>
    <string name="category_title">Category</string>
    <string name="hint_name">Enter your name.</string>
    <string name="hint_email">Enter your email id.</string>
    <string name="hint_submit">Type/Paste your message here and click submit to add it in our database along with your name. (only messages passing QC will be added)</string>
    <string name="hint_buginfo">Found a bug in the app! Elaborate us about the bug, so that we can fix the issue and provide additional support.</string>
    <string name="hint_share">Write your post content here...</string>
    <string name="lbl_name">Name*</string>
    <string name="lbl_email">Email* (Activation Required)</string>
    <string name="lbl_pass">Password* [A-Z],[a-z],[0-9] [6-18 Char.]</string>
    <string name="lbl_cpass">Confirm Password*</string>
    <string name="lbl_gender">Gender*</string>
    <string name="lbl_about">About</string>
    <string name="lbl_buginfo">Bug Info*</string>
    <string name="lbl_confirm">Are you sure?</string>
    <string name="lbl_login_email">E-mail*</string>
    <string name="lbl_login_password">Password*</string>
    <string name="lbl_search">Search Keyword</string>
    <string name="lbl_lang">Language</string>
    <string name="lbl_cat">Category</string>
    <string name="btn_register">Signup</string>
    <string name="btn_already">Already Registered, Click here to login.</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot">"Can't access your account?"</string>
    <string name="btn_paste">Paste</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_back">Back</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_post">Post</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_signin">Signin</string>
    <string name="btn_logout">Logout</string>
    <string name="m_settings">Settings</string>
    <string name="m_lang">Languages</string>
    <string name="m_help">Help</string>
    <string name="m_about">About</string>
    <string name="m_cat_pref">Category Preferences</string>
    <string name="m_sort">Sort Message</string>
    <string name="m_share">Share</string>
    <string name="m_forward">Forward</string>
    <string name="m_copy">Copy</string>
    <string name="m_report">Report</string>
    <string name="m_change_pname">Change Profile Name</string>
    <string name="m_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="applicationId">129452323925954</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted on your wall.</string>
    <string name="error">Error</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected></string>
    <string name="no_place_selected">&lt;No place selected></string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="home_website">Powered by www.latestnewsms.com</string>
    <string name="title_activity_message_details">MessageDetailsActivity</string>
    <string name="title_activity_search_main">SearchMainActivity</string>
</resources>
